[project]
name = "xai-stability-ai"
version = "0.1.0"
description = "A component library for interacting with the Stability AI platform."
authors = [{ name = "Your Name", email = "eduardo@xpress.ai" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xpressai/xai-stability-ai"
keywords = ["xircuits", "machine learning", "generative ai", "image", "image generation"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/example.xircuits"
requirements_path = "requirements.txt"
